Stop wrapping in H1

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -63,7 +63,7 @@ body {
 h1, h2, h3, p, ul, ol {
 
   font-size: $font-size;
-  max-width: 35 * $font-size;
+  max-width: 36 * $font-size;
   margin: 0 $line-height * 4 $line-height 0;
   line-height: $line-height;
 
